# tcc_pos_graduacao_etl_duckdb

./: README.md  docker-compose.yaml  my_database.db  pyproject.toml
dags/: dag_extracao.py
data_quality/: app.py
ddl_transacional/: northwind.sql
duckdb/gold/: clients_to_marketing.py  receitas_acumuladas.py  report_top_10_products.py  report_total_revenues_1997.py  total_revenues_per_customer.py  total_revenues_per_customer_group.py  uk_clients_who_pay_more_than_1000.py
duckdb/raw/: extracao.py
duckdb/silver/: app.py  dim_customers.py  dim_dates.py  dim_order_details.py  dim_products.py  fact_orders.py
motherduck/: conexao.py  input_dw.py
